- code cleanup - added comment to readme - fixed issues with uploading orders